--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "CI= craco build",
+    "build": "react-scripts build",
     "test": "craco test"
   },
   "eslintConfig": {
